[tool.poetry]
name = "recovery-forecasting"
version = "0.1.0"
description = ""
authors = ["Derek  <derekho4.20@gmail.com>"]
license = "Creative Commons License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
certifi = "2025.10.5"
charset-normalizer = "3.4.4"
contourpy = "1.3.2"
cycler = "0.12.1"
dotenv = "0.9.9"
fonttools = "4.60.1"
idna = "3.11"
ivolatility = "1.8.2"
kiwisolver = "1.4.9"
matplotlib = "3.10.7"
numpy = "2.2.6"
packaging = "25.0"
pandas = "2.3.3"
patsy = "1.0.2"
pillow = "12.0.0"
polars = "1.35.1"
polars-runtime-32 = "1.35.1"
pyparsing = "3.2.5"
python-dateutil = "2.9.0.post0"
python-dotenv = "1.2.1"
pytz = "2025.2"
requests = "2.32.5"
scipy = "1.15.3"
seaborn = "0.13.2"
six = "1.17.0"
statsmodels = "0.14.5"
tzdata = "2025.2"
urllib3 = "2.5.0"
fypy = {git = "https://github.com/jkirkby3/fypy.git"}
pyarrow = "^22.0.0"
fastparquet = "^2024.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
